--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>frontStore</title>
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -28,6 +28,183 @@
 
     <main class="contenedor">
         <h1>Nuestros Productos</h1>
+
+        <div class="grid">
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/1.jpg" alt="imagenCamisa">
+
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">VueJS</p>
+                        <p class="producto__precio"> $25</p>
+                    </div>
+                </a>
+            </div>
+            <!--fin de producto -->
+
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/2.jpg" alt="imagenCamisa">
+
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">AngularJs</p>
+                        <p class="producto__precio"> $25</p>
+                    </div>
+                </a>
+            </div>
+            <!--fin de producto -->
+
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/3.jpg" alt="imagenCamisa">
+
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">React Js</p>
+                        <p class="producto__precio"> $25</p>
+                    </div>
+                </a>
+            </div>
+            <!--fin de producto -->
+
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/4.jpg" alt="imagenCamisa">
+
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Redux</p>
+                        <p class="producto__precio"> $25</p>
+                    </div>
+                </a>
+            </div>
+            <!--fin de producto -->
+
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/5.jpg" alt="imagenCamisa">
+
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">NodeJS</p>
+                        <p class="producto__precio"> $25</p>
+                    </div>
+                </a>
+            </div>
+            <!--fin de producto -->
+
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/6.jpg" alt="imagenCamisa">
+
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">SASS</p>
+                        <p class="producto__precio"> $25</p>
+                    </div>
+                </a>
+            </div>
+            <!--fin de producto -->
+
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/7.jpg" alt="imagenCamisa">
+
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">HTML5</p>
+                        <p class="producto__precio"> $25</p>
+                    </div>
+                </a>
+            </div>
+            <!--fin de producto -->
+
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/8.jpg" alt="imagenCamisa">
+
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">GitHub</p>
+                        <p class="producto__precio"> $25</p>
+                    </div>
+                </a>
+            </div>
+            <!--fin de producto -->
+
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/9.jpg" alt="imagenCamisa">
+
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Bulmacss</p>
+                        <p class="producto__precio"> $25</p>
+                    </div>
+                </a>
+            </div>
+            <!--fin de producto -->
+
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/10.jpg" alt="imagenCamisa">
+
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">TipeScrip</p>
+                        <p class="producto__precio"> $25</p>
+                    </div>
+                </a>
+            </div>
+            <!--fin de producto -->
+
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/11.jpg" alt="imagenCamisa">
+
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">Drupal</p>
+                        <p class="producto__precio"> $25</p>
+                    </div>
+                </a>
+            </div>
+            <!--fin de producto -->
+
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/12.jpg" alt="imagenCamisa">
+
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">JavaScrip</p>
+                        <p class="producto__precio"> $25</p>
+                    </div>
+                </a>
+            </div>
+            <!--fin de producto -->
+
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/13.jpg" alt="imagenCamisa">
+
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">GraphQL</p>
+                        <p class="producto__precio"> $25</p>
+                    </div>
+                </a>
+            </div>
+            <!--fin de producto -->
+
+            <div class="producto">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="img/14.jpg" alt="imagenCamisa">
+
+                    <div class="producto__informacion">
+                        <p class="producto__nombre">WordePRESS</p>
+                        <p class="producto__precio"> $25</p>
+                    </div>
+                </a>
+            </div>
+            <!--fin de producto -->
+
+            <div class="grafico grafico--camisas"></div>
+            <div class="grafico grafico--node"></div>
+
+
+        </div>
+
+
     </main>
 
     <footer class="footer">
