contenido de nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -28,7 +28,54 @@
 
     <main class="contenedor">
         <h1>Nosotros</h1>
+        <div class="nosotros">
+            <div class="nosotros__contenido">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet tenetur ad, cum voluptate temporibus quisquam libero sed ratione officiis numquam fugit perspiciatis incidunt, voluptatibus recusandae quibusdam repudiandae fuga atque nobis.
+                Asperiores fugit tenetur officiis nesciunt quae doloribus, temporibus, dolore id dolor laboriosam eveniet harum ea vel eaque aperiam reiciendis veniam? Deleniti aut laboriosam harum debitis iste dolore placeat vero quaerat!
+                Facere quasi doloribus natus officiis hic, accusamus alias, sed aperiam praesentium id voluptatibus? Labore voluptatum libero est alias delectus laudantium nobis, fugit, perferendis odio accusantium vel velit eius ab maxime.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem accusantium necessitatibus enim quod aliquid quibusdam, adipisci optio expedita veritatis ea quis rerum culpa ducimus temporibus velit ex excepturi natus neque!
+                Itaque repellendus inventore doloremque totam neque aliquid architecto minima praesentium quibusdam blanditiis nihil eaque, quod, quisquam eveniet fugiat exercitationem eius quia culpa aperiam, aut corrupti rem vel fuga. Ipsum, atque?
+                Ducimus laudantium eveniet, ut qui possimus deserunt, ea pariatur sunt excepturi inventore, autem maxime quis nam quisquam sapiente nisi delectus placeat enim eos repellendus aut? Odit fugit minus est ipsa.</p>
+
+            </div>
+            <img src="img/nosotros.jpg" alt="imagen nosotros" class="nosotros__imagen">
+        </div>
     </main>
+
+    <section class="contenedor comprar">
+        <h2 class="comprar__titulo">¿Porque comprar con nosotros?</h2>
+        <div class="bloques">
+
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_1.png" alt="">
+                <h3 class="bloque__titulo">El mejor precio</h3>
+                <p>quis nam quisquam sapiente nisi delectus placeat enim eos repellendus aut? Odit fugit minus est ipsa.</p>
+            </div>  
+            <!-- terminacion de bloque  -->
+
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_2.png" alt="">
+                <h3 class="bloque__titulo">PARA DEVS</h3>
+                <p>quis nam quisquam sapiente nisi delectus placeat enim eos repellendus aut? Odit fugit minus est ipsa.</p>
+            </div>  
+            <!-- terminacion de bloque  -->
+
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_3.png" alt="">
+                <h3 class="bloque__titulo">ENVIOS GRATIS</h3>
+                <p>quis nam quisquam sapiente nisi delectus placeat enim eos repellendus aut? Odit fugit minus est ipsa.</p>
+            </div>  
+            <!-- terminacion de bloque  -->
+
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_4.png" alt="">
+                <h3 class="bloque__titulo">LA MEJOR CALIDAD</h3>
+                <p>quis nam quisquam sapiente nisi delectus placeat enim eos repellendus aut? Odit fugit minus est ipsa.</p>
+            </div>  
+            <!-- terminacion de bloque  -->
+        </div>
+
+    </section>
 
     <footer class="footer">
         <p class="footer__texto">Front End Store - Todos los derechos Reservados 2020.</p>
