--- a/productos.html
+++ b/productos.html
@@ -27,7 +27,30 @@
     </nav>
 
     <main class="contenedor">
-        <h1> Producto</h1>
+        <h1> REACT JS</h1>
+
+        <div class="camisa">
+            <img src="img/3.jpg" alt="" class="camisa__imagen">
+
+            <div class="camisa__contenido">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium deserunt omnis, impedit dolores
+                    id corporis iste, est sequi maxime debitis voluptatum dignissimos minima iure dicta dolorem, fuga
+                    odit laudantium aliquid!</p>
+                <form class="formulario">
+                    <select class="formulario__campo" name="" id="">
+                        <option value="" disabled selected>--seleccionar tallar--</option>
+                        <option value="">Chica</option>
+                        <option value="">Mediana</option>
+                        <option value="">Grande</option>  
+                    </select>
+                    <input class="formulario__campo" type="number" placeholder="cantidad" min="1">
+
+                    <input class="formulario__submit" type="submit" value="Agregar al carrito">
+                </form>
+                
+                
+            </div>
+        </div>
     </main>
 
     <footer class="footer">
